# Langgraph_RAG

./: README.md  ingestion.py  pyproject.toml
graph/: graph.py
graph/chains/: generation.py
graph/chains/tests/: test_chains.py
graph/chains/tests/.chroma/: chroma.sqlite3
graph/nodes/: web_search.py
